# fcitx5-lua

./: CMakeLists.txt  README.md  config.h.in  config.ld  org.fcitx.Fcitx5.Addon.Lua.metainfo.xml.in
.github/workflows/: check.yml
cmake/: Helper.cmake
docs/: index.html
docs/modules/: fcitx.html  ime.html
po/: CMakeLists.txt  LINGUAS  da.po  fcitx5-lua.pot  fr.po  ja.po  ko.po  ru.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt
src/addonloader/: CMakeLists.txt  base.lua  base.lua.h.in  luaaddon.cpp  luaaddon.h  luaaddon_public.h  luaaddonloader.conf.in  luaaddonloader.conf.in.in  luaaddonloader.cpp  luaaddonloader.h  luaaddonstate.cpp  luaaddonstate.h  luafunc.h  luahelper.cpp  luahelper.h  luastate.cpp  luastate.h  luastate_details.h
src/file2cstring/: CMakeLists.txt  file2cstring.cpp
src/imeapi/: CMakeLists.txt  imeapi.conf.in  imeapi.conf.in.in  imeapi.lua
test/: CMakeLists.txt  testdir.h.in  testlua.cpp
test/addon/: CMakeLists.txt  testlua.conf
test/lua/imeapi/: imeapi.lua
test/lua/imeapi/extensions/: testimeapi.lua
test/lua/testlua/: test.lua
